--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-calendar [multipleDates]="false" [limit]="3" (dateSelected)="oreofe($event)"></app-calendar>
+<app-calendar 
+  [multipleDates]="false"
+  [limit]="3"
+  (dateSelected)="select($event)">
+</app-calendar>
