--- a/src/app/component/calendar/calendar.scss
+++ b/src/app/component/calendar/calendar.scss
@@ -22,9 +22,10 @@
     
     .date {
       text-transform: capitalize;
+      cursor: pointer;
     }
 
-    .fas {
+    a {
       cursor: pointer;
     }
   }
@@ -88,4 +89,33 @@
       }
     }
   } 
+
+  .months {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 2px 10px 10px 10px;
+
+    & > * {
+      width: calc(100% / 4);
+      height: 60px;
+      text-transform: capitalize;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+
+      &:hover {
+        background-color: hsla(120, 100%, 32%, 0.5);
+        color: hsl(0, 0%, 100%);
+        border-radius: 50%;
+      }
+
+      &.selected {
+        border: 1px solid hsl(120, 100%, 32%);
+        box-sizing: border-box;
+        border-radius: 50%;
+      }
+    }
+  }
 }
