--- a/src/app/component/calendar/calendar.html
+++ b/src/app/component/calendar/calendar.html
@@ -7,6 +7,9 @@
     <span class="date" (click)="switchMode()" *ngIf="mode[selectedMode] === 'month'">
       {{returnedYear}}
     </span>
+    <span class="date" (click)="switchMode()" *ngIf="mode[selectedMode] === 'decade'">
+      {{returnedDecadeList[0]}} - {{returnedDecadeList[9]}}
+    </span>
     <a (click)="next()"><i class="fas fa-angle-right"></i></a>
   </div>
   <table cellspacing="0" *ngIf="mode[selectedMode] === 'calendar'">
@@ -35,6 +38,16 @@
         (click)="selectMonth(i)"
         [ngClass]="{ selected: selectedMonth(i) }">
         {{month.shortName}}
+      </span>
+    </div>
+  </div>
+  <div *ngIf="mode[selectedMode] === 'decade'" class="monthView">
+    <div class="months">
+      <span 
+        *ngFor="let year of returnedDecadeList"
+        (click)="selectYear(year)"
+        [ngClass]="{ selected: selectedYear(year) }">
+        {{year}}
       </span>
     </div>
   </div>
