--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<app-calendar 
+<app-datepicker 
   [multipleDates]="false"
   (dateSelected)="select($event)">
-</app-calendar>
+</app-datepicker>
 
-<app-calendar 
+<app-datepicker 
   [multipleDates]="true"
   [limit]="4"
   (dateSelected)="select($event)">
-</app-calendar>
+</app-datepicker>
