--- a/src/app/component/datepicker/datepicker.html
+++ b/src/app/component/datepicker/datepicker.html
@@ -1,4 +1,4 @@
-<div id="calendar">
+<div id="datepicker">
   <div class="calendarInfo">
     <a (click)="previous()"><i class="fas fa-angle-left"></i></a>
     <span class="date" (click)="switchMode()" *ngIf="mode[selectedMode] === 'calendar'">
