--- a/src/app/component/datepicker/datepicker.scss
+++ b/src/app/component/datepicker/datepicker.scss
@@ -2,33 +2,31 @@
   font-family: 'Open sans', Roboto, sans-serif;
   width: 250px;
   height: auto;
-  margin: 20px auto;
   position: relative;
-  background-color: hsl(0, 0, 100);
-  box-shadow: 0 2px 6px hsla(0, 0, 0, 0.2);
+  background-color: white;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   font-weight: 300;
   font-size: 12px;
-
+  padding-bottom: 5px;
+  // margin: auto;
   .calendarInfo {
     display: flex;
     justify-content: space-around;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     padding: 10px;
-    background-color: hsl(120, 100%, 32%);
-    color: hsl(0, 0%, 100%);
-    
+    background-color: hsla(353, 86%, 62%, 1);
+    color: white;
     .date {
       text-transform: capitalize;
       cursor: pointer;
     }
-
     a {
       cursor: pointer;
+      color: white;
     }
   }
-
   .date-modal {
     box-shadow: #ccc 1px 1px 1px, #ccc -1px 1px 1px;
     width: 250px;
@@ -37,10 +35,9 @@
     background-color: white;
     left: 53px;
     top: 25px;
-
     .modal-header {
       height: 30px;
-      background-color: hsl(168, 76%, 42%);
+      background-color: hsla(353, 86%, 62%, 1);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -49,12 +46,10 @@
       text-transform: capitalize;
     }
   }
-
   table {
     margin: auto;
     height: 100%;
     padding: 0 10px 10px 10px;
-
     th, td {
       height: 35px;
       width: 35px;
@@ -65,35 +60,37 @@
       font-weight: 300;
       padding: 0;
     }
-
     th {
-      color: hsl(0, 0, 60);
+      color: #999999;
       font-weight: 400;
     }
-    
     td {
       cursor: pointer;
-      color: hsl(0, 0, 60);
-      
+      color: #999999;
       &:hover {
-        color: hsl(120, 100%, 32%);
+        color: hsla(353, 86%, 62%, 1);
         font-weight: 500;
       }
-
       &.selected {
-        background-color: hsl(120, 100%, 32%);
-        color: hsl(0, 0, 100%);
+        background-color: hsla(353, 86%, 62%, 1);
+        color: white;
+      }
+      &.disabled {
+        cursor: not-allowed;
+        background-color: hsl(100, 0, 90);
+        &:hover {
+          color: #999;
+          font-weight: 300;
+        }
       }
     }
-  } 
-
+  }
   .months {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     padding: 2px 10px 10px 10px;
-
-    & > * {
+    > * {
       width: calc((100% / 4) - 22px);
       height: 35.5px;
       margin: 10px;
@@ -103,16 +100,14 @@
       align-items: center;
       cursor: pointer;
       border: 1px solid transparent;
-      color: hsl(0, 0, 60);
-
+      color: #999999;
       &:hover {
-        background-color: hsla(120, 100%, 32%, 0.5);
-        color: hsl(0, 0%, 100%);
+        background-color: hsla(353, 86%, 62%, 0.5);
+        color: white;
         border-radius: 50%;
       }
-
       &.selected {
-        border: 1px solid hsl(120, 100%, 32%);
+        border: 1px solid hsla(353, 86%, 62%, 1);
         border-radius: 50%;
       }
     }
